Fixed overflow for Firefox on Ubuntu.

--- a/public/stylesheets/article.css
+++ b/public/stylesheets/article.css
@@ -47,7 +47,7 @@
 /* Comments */
 #main #comments { background: url('../images/comment-big.png') no-repeat 0 4px; clear: both; float: left; font: bold 21px verdana; height: 30px; margin-bottom: 20px; margin-left: 10px; margin-top: 25px; padding-left: 35px; }
 
-#main .comment { border: 1px solid #EAEAEA; border-radius: 2px; clear: both; float: right; margin-bottom: 10px; padding: 10px; width: 835px; }
+#main .comment { border: 1px solid #EAEAEA; border-radius: 2px; clear: both; float: right; height: auto; margin-bottom: 10px; padding: 10px; width: 835px; }
 #main .comment .photo { float: left; }
 #main .comment .photo img { background-color: #EEE; float: left; height: 80px; margin-right: 7px; width: 80px; }
 #main .comment .name-date { height: 25px; width: 740px }
